Fix on z-index of tool panels

--- a/online3D/Content/Site.css
+++ b/online3D/Content/Site.css
@@ -84,6 +84,7 @@ body
     margin: 15px;
     height: auto;
     padding: 5px;
+    z-index:400;
 }
 
 
